Another Attempt at fixing mobile styles
Trying to fix:
- image-render is blurry
- Padding on sidebar button

--- a/public/css/minecraft.css
+++ b/public/css/minecraft.css
@@ -117,11 +117,7 @@ Classes:
 
 /* Backgrounds */
 [class*="bg-"] {
-    image-rendering: crisp-edges;
     image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: -webkit-optimize-contrast;
-    background-attachment: fixed;
     background-size: var(--block-size);
     -o-background-size: var(--block-size);
     -moz-background-size: var(--block-size);
